--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@ body {
   color: #49fb35; 
   text-align: left;
   font-family: monospace;
-  margin: 50%;
+  margin-left: 50%;
+  margin-right: 50%;
+  margin-top: 50px;
   width: 600px;
 }
 
