--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 
 
 body {
-  background: black; 
-  color: #49fb35; 
+  background: #EBECF0; 
+  color: #424242; 
   text-align: left;
   font-family: monospace;
   margin: auto; 
@@ -26,7 +26,7 @@ a:visited {
 }
 
 .green {
-  border: 5px solid #49fb35;
+  border: 5px solid #424242;
   border-radius: 5px;
 }
 
