--- a/style.css
+++ b/style.css
@@ -11,10 +11,14 @@ body {
 
 h1 {
   font-size: 40px;
+  text-align: center; 
 }
 
 img {
   width: 590px;
+  border-redius: 590px;
+  margin-left: auto; 
+  margin-right: auto; 
 }
 
 a:link {
