--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ h1 {
 }
 
 img {
-  width: 590px;
-  border-redius: 590px;
+  width: 600px;
+  border-redius: 10px 100px / 120px;
   margin-left: auto; 
   margin-right: auto; 
 }
