--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ h1 {
 
 img {
   width: 600px;
-  border-redius: 10px 100px / 120px;
+  border-redius: 100%;
   margin-left: auto; 
   margin-right: auto; 
 }
