--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
-
-
 body {
   background: #EBECF0; 
-  color: #424242; 
+  color: #5a5858; 
   text-align: left;
-  font-family: monospace;
+  font-family: Arial, Helvetica, sans-serif;
   margin: auto; 
   width: 600px;
 }
@@ -16,7 +14,7 @@ h1 {
 
 img {
   width: 600px;
-  border-redius: 100%;
+  border-radius: 10px 100px / 200px;
   margin-left: auto; 
   margin-right: auto; 
 }
@@ -26,8 +24,38 @@ a:link {
 }
 
 a:visited {
-  color: black;
+  color: #5a5858k;
 }
 
+.container {
+    outline: white 1px;
+    border: 1px white;
+    font-weight: 500;
+    border-radius: 4px;
+    height: 40px;
+    padding: 10px 10px;
+    text-shadow: rgb(0 0 0 / 25%) 0px 3px 8px;
+    background: white;
+    transition: all 0.5s ease 0s;
+    opacity: 0.5;
+    color: black; 
+    width: 480px;
+    margin-left: 8px; 
+    margin-bottom: 0px;
+}
 
+.container2 {
+  outline: white 1px;
+    border: 1px white;
+    font-weight: 500;
+    border-radius: 4px;
+    padding: 10px 10px;
+    text-shadow: rgb(0 0 0 / 25%) 0px 3px 8px;
+    background: white;
+    transition: all 0.5s ease 0s;
+    opacity: 0.5;
+    color: black;  
+    margin-bottom: 0px;
+  
+}
 
